[ADD] update workflows

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
 
 env:
   PROJECT_ID: ${{ vars.GCP_PROJECT_ID }}
-  SERVICE_NAME: hobe-bck-maps-api
+  SERVICE_NAME: hobe-bck-locations-api
 
 jobs:
   deploy:
